--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "project4",
-  "version": "1.0.0",
+  "name": "project4updated",
   "private": true,
-  "description": "Project 4 - Learn ReactJS",
-  "main": "webServer.js",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "webpack --devtool eval-cheap-module-source-map --output-pathinfo",
-    "build:w": "webpack --devtool eval-cheap-module-source-map --output-pathinfo --watch",
-    "lint": "eslint *.jsx components/*/*.jsx || exit 0"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "author": "Mendel Rosenblum <mendel@cs.stanford.edu> ",
-  "contributors": [
-    "Todd Dobbs <btdobbs@uncc.edu> (https://orcid.org/0000-0001-6711-6962)"
-  ],
-  "license": "ISC",
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
     "prismjs": "^1.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/core": "^7.16.12",
     "babel-jest": "^27.4.6",
@@ -33,13 +36,9 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-stage-2": "^7.8.3",
     "css-loader": "^6.5.1",
-    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2"
+    "style-loader": "^3.3.1"
   }
 }
